--- a/pages/index.html
+++ b/pages/index.html
@@ -8,8 +8,14 @@
         <link rel="stylesheet" href="../css/index.css" />
     </head>
     <body>
-        <h1>Backcare</h1>
+        <div class="container">
+            <img src="../assets/images/logo.svg" alt="backcare-logo" width="144px" height="144px">
+            <h1>Backcare</h1>
 
-        <script src="./scripts/index.js"></script>
+            <button type="button" id="startButton">iniciar</button>
+            
+
+            <script src="../scripts/index.js"></script>
+        </div>
     </body>
 </html>
